# MyNote

./: .gitignore  LICENSE  README.md  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
api/agent/: chat.ts
electron/: main.ts  preload.ts
electron/db/: connection.ts  queries.ts
electron/ipc/: assets.ts  diary.ts  export.ts  git.ts  notes.ts  search.ts  todos.ts
scripts/: agent-dev-server.ts
shared/: agent.ts  types.ts
src/: App.tsx  api.ts  global.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  state.rs  vault.rs
src-tauri/src/commands/: assets.rs  diary.rs  export.rs  git.rs  mod.rs  notes.rs  search.rs  todos.rs  vault_cmd.rs
src/components/agent/: AgentSidebar.tsx  agentClient.ts
src/components/dashboard/: Dashboard.tsx
src/components/diary/: DiaryView.tsx  TimelineView.tsx
src/components/editor/: MilkdownEditor.tsx  OutlineSidebar.tsx  editorInteractions.ts  useAutoSave.ts
src/components/knowledge/: KnowledgeView.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx  Titlebar.tsx  VaultPrompt.tsx
src/components/todo/: TodoView.tsx
src/stores/: noteStore.ts  tabStore.ts  themeStore.ts  uiStore.ts  vaultStore.ts
src/styles/: index.css  milkdown.css
